--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --background-colour: #2f3e46;
-    --main-colour: #a8b5c3;
-    --sub-colour: #d2d8d4;
-    --accent-colour: #c2a27e;
+    --background-colour: 47, 62, 70;
+    --main-colour: 168, 181, 195;
+    --sub-colour: 210, 216, 212;
+    --accent-colour: 194, 162, 126;
 }
 
 *, ::before, ::after {
@@ -10,7 +10,7 @@
 }
 
 html {
-    background-color: var(--background-colour);
+    background-color: rgb(var(--background-colour));
     color: white;
     font-family: 'EB Garamond', serif;
     letter-spacing: 0.1em;
@@ -29,32 +29,30 @@ html {
     width: 150px;
     height: 30px;
     font-size: 18px;
-    background-color: var(--sub-colour);
+    background-color: rgb(var(--sub-colour));
 }
 #amount {
     width: 100px;
     height: 30px;
     font-size: 18px;
-    background-color: var(--sub-colour);
+    background-color: rgb(var(--sub-colour));
 }
 #date {
     width: 120px;
     height: 30px;
     font-size: 16px;
-    background-color: var(--sub-colour);
+    background-color: rgb(var(--sub-colour));
 }
 #category {
     width: 200px;
     height: 30px;
     font-size: 16px;
-    background-color: var(--sub-colour);
+    background-color: rgb(var(--sub-colour));
 }
-input[type="text"],
-input[type="number"],
-input[type="date"],
+input,
 select {
-    background-color: var(--sub-colour);
-    border: 1px solid var(--main-colour);
+    background-color: rgb(var(--sub-colour));
+    border: 1px solid rgb(var(--main-colour));
     border-radius: 3px;
     padding: 6px 10px;
     font-size: 16px;
@@ -62,12 +60,10 @@ select {
     color: black;
     outline: none;
 }
-input[type="text"]:focus,
-input[type="number"]:focus,
-input[type="date"]:focus,
+input:focus,
 select:focus {
-    border-color: var(--accent-colour);
-    box-shadow: 0 0 4px var(--accent-colour);
+    border-color: rgb(var(--accent-colour));
+    box-shadow: 0 0 4px rgb(var(--accent-colour));
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 #submit {
@@ -75,7 +71,7 @@ select:focus {
     height: 30px;
     padding: 0;
     font-size: 18px;
-    background: var(--accent-colour);
+    background: rgb(var(--accent-colour));
     color: white;
     border: none;
     border-radius: 3px;
@@ -94,7 +90,6 @@ select:focus {
 .tabs {
     text-align: center;
     margin: 20px 0;
-    
 }
 .tab-button {
     position: relative;
@@ -103,15 +98,17 @@ select:focus {
     margin: 0 10px;
     text-align: center;
     background-color: transparent;
-    color: var(--sub-colour);
+    color: rgb(var(--sub-colour));
     border: none;
     font-size: 16px;
     font-family: 'Georgia', serif;
     box-shadow: 1px 4px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
 }
 .tab-button:hover {
     box-shadow: none;
-    transition: box-shadow 0.2s ease;
+    transform: translateY(15%);
+    transition: all 0.2s ease;
 }
 .tab-button::after {
     content: "";
@@ -120,7 +117,7 @@ select:focus {
     left: 50%;
     width: 0;
     height: 2px;
-    background-color: var(--accent-colour);
+    background-color: rgb(var(--accent-colour));
     transition: all 0.3s ease;
     transform: translateX(-50%);
     opacity: 0;
@@ -130,7 +127,7 @@ select:focus {
     opacity: 1;
 }
 .tab-button.active {
-    background-color: var(--accent-colour);
+    background-color: rgb(var(--accent-colour));
     color: white;
     font-weight: bold;
     transition: all 0.15s ease;
@@ -148,6 +145,7 @@ select:focus {
 /* graph design */
 #graph {
     text-align: center;
+    margin: 40px 0;
 }
 #expenseGraph {
     max-width: 100%;
@@ -167,17 +165,26 @@ select:focus {
     align-items: center;
     gap: 30px;
     padding: 5px;
-    color: var(--sub-colour);
+    color: rgb(var(--sub-colour));
 }
 #graph-month-year {
     font-size: 35px;
 }
 #prev-graph-month, #next-graph-month {
     font-size: 18px;
-    background-color: rgba(168, 181, 195, 0.8);
+    background-color: rgba(var(--main-colour), 0.8);
     border: none;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     height: 25px;
+}
+#graph h3 {
+    font-size: 25px;
+    margin: 30px 0 10px 0;
+}
+#graph .wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 /* calendar design */
@@ -187,14 +194,14 @@ select:focus {
     align-items: center;
     gap: 30px;
     padding: 5px;
-    color: var(--sub-colour);
+    color: rgb(var(--sub-colour));
 }
 #month-year {
     font-size: 35px;
 }
 #prev-month, #next-month {
     font-size: 18px;
-    background-color: rgba(168, 181, 195, 0.8);
+    background-color: rgba(var(--main-colour), 0.8);
     border: none;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     height: 25px;
@@ -209,31 +216,31 @@ select:focus {
 }
 #calendar-table th, #calendar-table td {
     width: 70px;
-    border: 1px solid var(--sub-colour);
+    border: 1px solid rgb(var(--sub-colour));
 }
 #calendar-table th {
-    background-color: rgba(168, 181, 195, 0.5);
+    background-color: rgba(var(--main-colour), 0.5);
 }
 #calendar-table td {
     height: 60px;
-    background-color: rgba(168, 181, 195, 0.2);
+    background-color: rgba(var(--main-colour), 0.2);
 }
 #calendar-table td.has-expense {
     position: relative;
     z-index: 1;
-    box-shadow: inset 0 0 9px rgba(194, 162, 126, 0.7);
+    box-shadow: inset 0 0 9px rgba(var(--accent-colour), 0.7);
     border-radius: 0px;
     transition: box-shadow 0.3s ease;
 }
 #calendar-table td.has-expense:hover {
-    box-shadow: inset 0 0 12px rgba(194, 162, 126, 1);
+    box-shadow: inset 0 0 12px rgba(var(--accent-colour), 1);
     cursor: pointer;
     transition: box-shadow 0.3s ease;
 }
 .monthly-total {
     text-align: right;
     margin: 5px 25px 20px 0;
-    color: var(--sub-colour);
+    color: rgb(var(--sub-colour));
     font-weight: bold;
     font-size: 20px;
 }
@@ -241,7 +248,7 @@ select:focus {
     max-width: 600px;
     width: 80%;
     margin: 0px auto;
-    background-color: var(--main-colour);
+    background-color: rgb(var(--main-colour));
     color: black;
     padding: 0px 0 10px 0;
     border-radius: 5px;
@@ -254,7 +261,7 @@ select:focus {
 }
 .calendar-amount {
     font-size: 14px;
-    color: var(--sub-colour);
+    color: rgb(var(--sub-colour));
     margin-top: 2px;
 }
 .calendar-popup {
@@ -262,7 +269,7 @@ select:focus {
     bottom: -60px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: var(--main-colour);
+    background-color: rgb(var(--main-colour));
     color: black;
     padding: 6px 10px;
     border-radius: 5px;
@@ -277,17 +284,68 @@ select:focus {
 }
 
 /* List design */
+#list .wrap {
+    display: flex;
+    justify-content: center;
+}
+#sort-toggle, #filter-toggle, #export-button, #import-button {
+    width: 80px;
+    padding: 10px 20px;
+    margin: 10px 10px;
+    text-align: center;
+    color: white;
+    border: none;
+    font-size: 16px;
+    font-family: 'Georgia', serif;
+    box-shadow: 1px 4px 3px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease;
+}
+#sort-toggle:hover, #filter-toggle:hover, #export-button:hover, #import-button:hover {
+    box-shadow: none;
+    transform: translateY(15%);
+    transition: all 0.2s ease;
+}
+.btn-active {
+    background-color: rgb(var(--accent-colour));
+}
+.btn-inactive {
+    background-color: transparent;
+}
+.list-popup {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 10;
+    color: black;
+    background-color: rgb(var(--sub-colour));
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
+.hidden {
+    display: none;
+}
+.controls {
+    position: relative;
+    margin-bottom: 1rem;
+}
+#list label {
+    margin: 5px 0 10px 20px;
+}
+#sort {
+    margin: 10px 0;
+}
 #expense-table {
     margin: 0 auto;
     border-collapse: collapse;
 }
 .title, .date-table, .item-table, .amount-table, .category-table, .edit-table {
-    border: 1px solid var(--main-colour);
+    border: 1px solid rgb(var(--main-colour));
 }
 .title {
     text-align: center;
     margin: 2px 0px;
-    background-color: var(--main-colour);
+    background-color: rgb(var(--main-colour));
     color: black;
     min-width: 100px;
 }
@@ -314,7 +372,7 @@ i {
     
 }
 i:hover {
-    color: var(--accent-colour);
+    color: rgb(var(--accent-colour));
     cursor: pointer;
 }
 .edit {
